--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
   <div class="container">
    <nav id="header">
         <div class="nav-logo">
-            <p class="nav-name">Portfolio Judicael</p>
+            <p class="nav-name">Portfolio </p>
         </div>
         <div class="nav-menu" id="myNavMenu">
             <ul class="nav_menu_list">              
@@ -22,7 +22,7 @@
                         <div class="circle"></div>
                     </li>                   
                         <li class="nav_list">
-                            <a href="#about" class="nav-link">À propos</a>
+                            <a href="#about" class="nav-link"><span>À</span>propos</a>
                             <div class="circle"></div>
                         </li>                      
                             <li class="nav_list">
@@ -187,7 +187,7 @@
                 <div class="form-control">
                     <div class="form-inputs">
                         <input type="text" class="input-field" placeholder="votre nom">
-                        <input type="text" class="input-field" placeholder="email email">
+                        <input type="text" class="input-field" placeholder="email">
                     </div>
                     <div class="test-area">
                         <input type="text" class="input-subject" placeholder="Subject">
@@ -223,6 +223,8 @@
 </footer>
 
   </div>
-<script src=""></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.1.0/typed.umd.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/scrollReveal.js/4.0.9/scrollreveal.min.js"></script>
+<script src="portfolio.js"></script>
 </body>
 </html>
