--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,7 @@
             <div class="text-btn">
                 <button class="btn hire-btn" onclick="openContactForm()">Embauchez-moi</button>
                 <button class="btn">
-                    <a href="cv/CV Razafindraibe Safidiniaina Judicael.pdf" download="Judicael_CV.pdf" style="text-decoration: none; color: inherit;">
+                    <a href="cv/CV Razafindraibe Safidiniaina Judicael.pdf" download="CV Razafindraibe Safidiniaina Judicael.pdf" style="text-decoration: none; color: inherit;">
                         Télécharger le CV <i class="uil uil-file"></i>
                     </a>
                 </button>
